# stellar-one

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start_server.cmd
app/: config.py
app/api/: endpoints.py
app/db/: session.py
app/graph/: stellar_graph.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: embedding_service.py  llm_service.py  similarity_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CreateTemplateModal.tsx  GeneratedResultCard.tsx  HistoryList.tsx  LoadingSkeleton.tsx  SimilarityList.tsx  TemplateCard.tsx
frontend/src/components/ui/: card.tsx
frontend/src/pages/: TemplateDetailPage.tsx  TemplatesPage.tsx
frontend/src/services/: templates.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
scripts/: init_db.py  reset_db.py
